objects/tc_CalendarSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>End_Date_Field__c</fullName>
        <inlineHelpText>The field which specifies the end date of an event.</inlineHelpText>
        <label>End Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>Enter the API name of the object to display.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Field__c</fullName>
        <inlineHelpText>The field which specifies the start date of an event.</inlineHelpText>
        <label>Start Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <inlineHelpText>Enter the jQueryUI theme. This must match a name from the jQueryUI themes:
http://jqueryui.com/themeroller</inlineHelpText>
        <label>Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Field__c</fullName>
        <inlineHelpText>The field used to display the title of an event on the calendar.</inlineHelpText>
        <label>Title Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Calendar Settings</label>
</CustomObject>